# SemestralnaPracaPOS

./: CMakeLists.txt  Makefile  NAVOD_UPLOAD.txt  README.md  example_map.txt
src/client/: client.c  menu.c  menu.h  ui.c  ui.h
src/common/: network.c  network.h  protocol.c  protocol.h
src/server/: game_logic.c  game_logic.h  map.c  map.h  server.c  snake.c  snake.h
